--- a/Project/frontend/src/pages/Inventory/manage-inventory-page/manage-inventory.scss
+++ b/Project/frontend/src/pages/Inventory/manage-inventory-page/manage-inventory.scss
@@ -1,144 +1,152 @@
 // colors
-$primary-color-navyBlue : #2C2C54;
-$secondary-color-purple1: #7D5FFF;
-$secondary-color-purple2: #5F27CD;
-$secondary-color-purple3: #9980FA;
-$secondary-color-purple4: #E9E3FF;
-
+$primary-color-navyBlue: #2c2c54;
+$secondary-color-purple1: #7d5fff;
+$secondary-color-purple2: #5f27cd;
+$secondary-color-purple3: #9980fa;
+$secondary-color-purple4: #e9e3ff;
+$success-color: #2ecc71;
+$danger-color: #e74c3c;
 
 .actionbar-container-manage-inventory {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 90%;
-    overflow: hidden;
-    position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	width: 100%;
+	height: 90%;
+	overflow: hidden;
+	position: relative;
 }
 
 // search bar stylings
 .search-bar-container {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 10px;
 }
 
 .search-field {
-    width: 350px;
-    border: transparent;
-    background-color: #eaeaea;
-    padding: 5px 0px 5px 10px;
-    border-radius: 5px 0 0 5px;
-    color: #2C2C54;
-    height: 30px;
-    font-size: 20px;
-    outline: 2px solid $secondary-color-purple1;
+	width: 350px;
+	border: transparent;
+	background-color: #eaeaea;
+	padding: 5px 0px 5px 10px;
+	border-radius: 5px 0 0 5px;
+	color: #2c2c54;
+	height: 30px;
+	font-size: 20px;
+	outline: 2px solid $secondary-color-purple1;
 }
 
 .search-btn {
-    border: none;
-    font-size: 22px;
-    color: white;
-    padding: 5px;
-    height: 33px;
-    width: 60px;
-    border-radius: 0 5px 5px 0;
-    background-color: $secondary-color-purple1;
+	outline: none;
+	border: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 22px;
+	color: white;
+	height: 34px;
+	width: 60px;
+	border-radius: 0 5px 5px 0;
+	background-color: $secondary-color-purple1;
 }
 
 .search-btn:hover {
-    cursor: pointer;
+	cursor: pointer;
 }
-
 
 // search results and displayers stylings
 
 .inventory-info-item-head {
-    width: 100%;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 10px;
-    border-top: 1px solid #888;
-    border-bottom: 1px solid #888;
+	width: 100%;
+	padding: 10px 20px;
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 10px;
+	border-top: 1px solid #888;
+	border-bottom: 1px solid #888;
 }
 
-
 .item-field-head-manage-inventory {
-    width: 170px;
-    text-align: center;
-    color: #2C2C54;
-    font-size: 18px;
-    font-weight: 600;
+	width: 170px;
+	text-align: center;
+	color: #2c2c54;
+	font-size: 18px;
+	font-weight: 600;
 }
 
 .item-field-manage-inventory {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 165px;
-    text-align: center;
-    color: #2C2C54;
-    font-size: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 165px;
+	text-align: center;
+	color: #2c2c54;
+	font-size: 16px;
 }
 
 .search-results-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 95%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 95%;
 }
 
 .search-results-container {
-    width: 100%;
-    height: 550px;
-    padding: 0 10px;
-    margin: 5px;
-    overflow-y: scroll;
+	width: 100%;
+	height: 550px;
+	padding: 0 10px;
+	margin: 5px;
+	overflow-y: scroll;
 }
 
 .search-results-container::-webkit-scrollbar {
-    width: 0.5em;
+	width: 0.5em;
 }
 
 .search-results-container::-webkit-scrollbar-track {
-    background: #f1f1f1;
+	background: #f1f1f1;
 }
 
 .search-results-container::-webkit-scrollbar-thumb {
-    background-color: $secondary-color-purple3;
-    border-radius: 0.5em;
+	background-color: $secondary-color-purple3;
+	border-radius: 0.5em;
 }
 
 .action-btns-manage-inventory {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    padding: 2px;
-    margin-left: 20px;
-    font-size: 20px;
-    color: white;
-    border: transparent;
-    border-radius: 5px;
-    transition: .2s;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	height: 30px;
+	padding: 2px;
+	margin-left: 20px;
+	font-size: 20px;
+	color: white;
+	border: transparent;
+	border-radius: 5px;
+	transition: 0.2s;
 }
 
 .action-btns-manage-inventory:hover {
-    box-shadow: 2px 2px 1px rgba($color: #000000, $alpha: 1.0);
-    cursor: pointer;
+	box-shadow: 2px 2px 1px rgba($color: #000000, $alpha: 1);
+	cursor: pointer;
 }
 
-
 .action-btns-manage-inventory:nth-child(1) {
-    background-color: green;
+	background-color: green;
 }
 
 .action-btns-manage-inventory:nth-child(2) {
-    background-color: crimson;
+	background-color: crimson;
+}
+
+// btn success , btn danger stylings
+
+.btn-success {
+	width: 80px;
+	height: 20px;
 }
