Implemented CRUD for produts

--- a/Project/frontend/src/components/dataGrid/customDataGrid.scss
+++ b/Project/frontend/src/components/dataGrid/customDataGrid.scss
@@ -9,12 +9,12 @@
 }
   
 .customDataGrid {
-    border: none;
+    border: 1px solid lightgray;
     width: 100%;
 }
   
 .customDataGrid .MuiDataGrid-main {
-    border: none;
+    border: 1px solid lightgray;
     padding: 0 5px;
 }
   
