--- a/Project/frontend/src/pages/Pet/AddPet.scss
+++ b/Project/frontend/src/pages/Pet/AddPet.scss
@@ -9,7 +9,7 @@ $ash-color: #636e72;
 // fonts
 $fontfam-1: 'Poppins', sans-serif;
 
-.add-item-container-main{
+.add-pet-container-main{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,8 +23,7 @@ $fontfam-1: 'Poppins', sans-serif;
 // form styles will go on here
 .add-item-form-container {
     width: 950px;
-    height: 580px;
-    background-color: white;
+    height: 650px;
     border-radius: 25px;
     box-shadow: 5px 5px 8px rgba($color: #000000, $alpha: .4),
     -5px -5px 8px rgba($color: #000000, $alpha: .4);
@@ -101,7 +100,7 @@ $fontfam-1: 'Poppins', sans-serif;
 .input-field{
     width: 400px;
     font-size: 1em;
-    padding: 10px 30px;
+    padding: 10px 20px;
     outline: none;
     margin: 10px 0 15px 0;
     border: 2px solid $primary-color-navyBlue;
@@ -134,24 +133,14 @@ $fontfam-1: 'Poppins', sans-serif;
 }
 
 .btn-container-add-item{
-    margin-top: 40px;
+    margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
-    width: 690px;
-}
-
-.propic{
-    display: flex;
-    flex-direction: column;
     width: 400px;
-    font-size: 1em;
-    padding: 10px 30px;
-    outline: none;
-    
 }
 
 .submit-btn{
-    padding: 40px 50px;
+    padding: 5px 50px;
     width: 200px;
     outline: none;
     border: 2px solid transparent;
@@ -163,7 +152,7 @@ $fontfam-1: 'Poppins', sans-serif;
 }
 
 .reset-btn{
-    padding: 40px 50px;
+    padding: 5px 50px;
     width: 180px;
     outline: none;
     border: 2px solid $secondary-color-purple1;
