--- a/Project/frontend/src/pages/Inventory/manage-inventory-page/manage-inventory.scss
+++ b/Project/frontend/src/pages/Inventory/manage-inventory-page/manage-inventory.scss
@@ -125,23 +125,28 @@ $danger-color: #e74c3c;
 	padding: 2px;
 	margin-left: 20px;
 	font-size: 20px;
-	color: white;
 	border: transparent;
 	border-radius: 5px;
 	transition: 0.2s;
+	background-color: transparent;
 }
 
 .action-btns-manage-inventory:hover {
-	box-shadow: 2px 2px 1px rgba($color: #000000, $alpha: 1);
+	// box-shadow: 2px 2px 1px rgba($color: #000000, $alpha: 1);
 	cursor: pointer;
 }
 
 .action-btns-manage-inventory:nth-child(1) {
-	background-color: green;
+	color: $secondary-color-purple1;
 }
 
+
 .action-btns-manage-inventory:nth-child(2) {
-	background-color: crimson;
+	color: green;
+}
+
+.action-btns-manage-inventory:nth-child(3) {
+	color: crimson;
 }
 
 // btn success , btn danger stylings
