--- a/Project/frontend/src/pages/Delivery/ManageDriver/ManageDriver.scss
+++ b/Project/frontend/src/pages/Delivery/ManageDriver/ManageDriver.scss
@@ -5,7 +5,7 @@ $secondary-color-purple2: #5f27cd;
 $secondary-color-purple3: #9980fa;
 $secondary-color-purple4: #e9e3ff;
 
-.actionbar-container-manage-inventory {
+.actionbar-container-manage-driver {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -54,7 +54,7 @@ $secondary-color-purple4: #e9e3ff;
 
 // search results and displayers stylings
 
-.inventory-info-item-head {
+.driver-info-item-head {
 	width: 100%;
 	padding: 10px 20px;
 	display: flex;
@@ -64,7 +64,17 @@ $secondary-color-purple4: #e9e3ff;
 	border-bottom: 1px solid #888;
 }
 
-.item-field-head-manage-inventory {
+.driver-info {
+	border-radius: 12px;
+	width: 100%;
+	padding: 10px 20px;
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 5px;
+	border: 1px solid rgba($color: #000000, $alpha: 0.4);
+}
+
+.item-field-head-manage-driver {
 	width: 170px;
 	text-align: center;
 	color: #2c2c54;
@@ -72,7 +82,7 @@ $secondary-color-purple4: #e9e3ff;
 	font-weight: 600;
 }
 
-.item-field-manage-inventory {
+.item-field-manage-driver {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -80,6 +90,10 @@ $secondary-color-purple4: #e9e3ff;
 	text-align: center;
 	color: #2c2c54;
 	font-size: 16px;
+}
+
+.item-field-manage-driver:nth-child(6) {
+	padding-left: 20px;
 }
 
 .search-results-section {
@@ -111,30 +125,34 @@ $secondary-color-purple4: #e9e3ff;
 	border-radius: 0.5em;
 }
 
-.action-btns-manage-inventory {
+.action-btns-manage-driver {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 30px;
 	height: 30px;
 	padding: 2px;
-	margin-left: 20px;
+	margin-left: 5px;
 	font-size: 20px;
 	color: white;
 	border: transparent;
 	border-radius: 5px;
 	transition: 0.2s;
+	background: transparent;
 }
 
-.action-btns-manage-inventory:hover {
-	box-shadow: 2px 2px 1px rgba($color: #000000, $alpha: 1);
+.action-btns-manage-driver:hover {
 	cursor: pointer;
 }
 
-.action-btns-manage-inventory:nth-child(1) {
-	background-color: green;
+.action-btns-manage-driver:nth-child(1) {
+	color: $primary-color-navyBlue;
 }
 
-.action-btns-manage-inventory:nth-child(2) {
-	background-color: crimson;
+.action-btns-manage-driver:nth-child(2) {
+	color: green;
+}
+
+.action-btns-manage-driver:nth-child(3) {
+	color: crimson;
 }
