dashboard-issue-fixed & home page footer added

--- a/Project/frontend/src/components/sidebar/sidebar.scss
+++ b/Project/frontend/src/components/sidebar/sidebar.scss
@@ -28,6 +28,8 @@ $secondary-color-purple4: #e9e3ff;
 	font-weight: 700;
 	font-size: 30px;
 	min-height: 70px;
+	width: 100%;
+	text-align: center;
 	color: $secondary-color-purple4;
 }
 
