--- a/Project/frontend/src/pages/Services/ViewRecord.scss
+++ b/Project/frontend/src/pages/Services/ViewRecord.scss
@@ -7,11 +7,6 @@
     min-height: 90vh;
 }
 
-.imageContainer {
-    text-align: center;
-    vertical-align: middle;
-}
-
 table {
     margin: 5px;
     border: 2px solid gray;
@@ -22,3 +17,60 @@ table tr td {
     border: 1px solid lightgray;
     padding: 5px 10px;
 }
+
+.record-container{
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+
+
+.record-details-container{
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 625px;
+    height: 90%;
+}
+
+
+.record-prompts{
+    font-size: 1.2em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 49%;
+    height: 100%;
+}
+
+.record-values{
+    font-size: 1.2em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 55%;
+    height: 100%;
+}
+
+.record-line-info{
+    padding: 5px 10px;
+    margin-top: 10px;
+    font-weight: 700;
+}
+
+.record-line-info-values{
+    width: 90%;
+    padding: 5px 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
