supplier part CRUD operations added

--- a/Project/frontend/src/pages/Inventory/manage-inventory-page/manage-inventory.scss
+++ b/Project/frontend/src/pages/Inventory/manage-inventory-page/manage-inventory.scss
@@ -137,7 +137,7 @@ $danger-color: #e74c3c;
 }
 
 .action-btns-manage-inventory:nth-child(1) {
-	color: $secondary-color-purple1;
+	color: $primary-color-navyBlue;
 }
 
 
