minor issues solved partially

--- a/Project/frontend/src/pages/Delivery/CompletedOrder/CompletedOrder.scss
+++ b/Project/frontend/src/pages/Delivery/CompletedOrder/CompletedOrder.scss
@@ -142,9 +142,9 @@ $secondary-color-purple4: #e9e3ff;
 }
 
 .action-btns-view-order:nth-child(1){
-	color: green;
-}
-
-.action-btns-view-order:nth-child(2){
 	color: red;
 }
+
+// .action-btns-view-order:nth-child(2){
+// 	color: red;
+// }
