--- a/Project/frontend/src/components/store/Header/header.scss
+++ b/Project/frontend/src/components/store/Header/header.scss
@@ -21,7 +21,7 @@ $font-fam-1: "Poppins", sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #2c2c54;
+    background-color: #E9E3FF;
     width: 100%;
     height: 60px;
     color: white;
@@ -42,6 +42,7 @@ $font-fam-1: "Poppins", sans-serif;
     line-height: 35px;
     margin-left: 20px;
     font-weight: 700;
+    color: #2C2C54;
 }
 
 .partition-nav-2 {
@@ -63,24 +64,25 @@ $font-fam-1: "Poppins", sans-serif;
     border-bottom: 3px solid transparent;
     height: 40px;
     transition: 0.2s;
+    color: #2C2C54;
 }
 
 .partition-nav-2>.nav-links:hover {
-    color: white;
+    color: #2C2C54;
     cursor: pointer;
    border-color: $secondary-col3;
 }
 
 .nav-login-btn:hover {
     background-color: $secondary-col3;
-    color: white;
+    color: #2C2C54;
     cursor: pointer;
     border-color: $secondary-col3;
 }
 
 .nav-login-btn {
-    border: 2px solid white;
-    color:white;
+    border: 2px solid #7d5fff;
+    color: #2C2C54;
     background-color: transparent;
     border-radius: 20px;
     padding: 4px 20px;
