--- a/Project/frontend/src/pages/Delivery/ProcessingOrder/ProcessingOrder.scss
+++ b/Project/frontend/src/pages/Delivery/ProcessingOrder/ProcessingOrder.scss
@@ -121,7 +121,7 @@ $secondary-color-purple4: #e9e3ff;
 	border-radius: 0.5em;
 }
 
-.action-btns-view-order {
+.action-btns-view-orderV2 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -138,6 +138,6 @@ $secondary-color-purple4: #e9e3ff;
 	color: green;
 }
 
-.action-btns-view-order:hover {
+.action-btns-view-orderV2:hover {
 	cursor: pointer;
 }
