--- a/Project/frontend/src/pages/Delivery/ViewOrder/ViewOrder.scss
+++ b/Project/frontend/src/pages/Delivery/ViewOrder/ViewOrder.scss
@@ -121,7 +121,7 @@ $secondary-color-purple4: #e9e3ff;
 	border-radius: 0.5em;
 }
 
-.action-btns-view-order {
+.action-btns-view-orderV1 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -135,12 +135,13 @@ $secondary-color-purple4: #e9e3ff;
 	border-radius: 5px;
 	transition: 0.2s;
 	background: transparent;
+	color: green;
 }
 
-.action-btns-view-order:hover {
+.action-btns-view-orderV1:hover {
 	cursor: pointer;
 }
 
-.action-btns-view-order:nth-child(1){
+.action-btns-view-orderV1:nth-child(1){
 	color: green;
 }
