--- a/Project/frontend/src/pages/Product/manageProducts.scss
+++ b/Project/frontend/src/pages/Product/manageProducts.scss
@@ -60,7 +60,7 @@
     min-width: 320px;
 }
 
-.search-field{
+.searchField{
     width: 250px;
     border: transparent;
     background-color: #eaeaea;
@@ -72,7 +72,7 @@
     outline: 2px solid #7D5FFF;
 }
 
-.search-btn{
+.searchBtn{
     border: none;
     font-size: 18px;
     color: white;
@@ -88,6 +88,6 @@
     box-sizing: border-box;
 }
 
-.search-btn:hover{
+.searchBtn:hover{
     cursor: pointer;
 }
