--- a/Project/frontend/src/pages/Product/manageOrders.scss
+++ b/Project/frontend/src/pages/Product/manageOrders.scss
@@ -16,6 +16,15 @@
     transition: all .2s ease-in-out;
 }
 
+.processing {
+    background-color: #54B7D3;
+    color: white;
+    border-radius: 4px;
+    padding: 4px 10px;
+    text-align: center;
+    transition: all .2s ease-in-out;
+}
+
 h1 {
     font-size: 36px;
     font-weight: bold;
