--- a/Project/frontend/src/pages/Staff/Leave/EditLeave.scss
+++ b/Project/frontend/src/pages/Staff/Leave/EditLeave.scss
@@ -9,7 +9,7 @@ $ash-color: #636e72;
 // fonts
 $fontfam-1: 'Poppins', sans-serif;
 
-.add-item-container-main{
+.edit-leave-container-main{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,9 +21,9 @@ $fontfam-1: 'Poppins', sans-serif;
 
 
 // form styles will go on here
-.add-item-form-container {
-    width: 950px;
-    height: 650px;
+.edit-leave-form-container {
+    width: 450px;
+    height: 600px;
     background-color: white;
     border-radius: 25px;
     box-shadow: 5px 5px 8px rgba($color: #000000, $alpha: .4),
@@ -61,7 +61,7 @@ $fontfam-1: 'Poppins', sans-serif;
     visibility: visible;
 }
 
-.tagline-add-item{
+.tagline-edit-leave{
     font-size: 20px;
     font-weight: 600;
     color: $secondary-color-purple1;
@@ -76,7 +76,7 @@ $fontfam-1: 'Poppins', sans-serif;
     height: 530px;
 }
 
-.add-item-column{
+.edit-leave-column{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -114,7 +114,7 @@ $fontfam-1: 'Poppins', sans-serif;
 
 .input-textarea{
     width: 400px;
-    font-size: 16px;
+    font-size: 20px;
     padding: 10px 20px;
     outline: none;
     margin: 10px 0 15px 0;
@@ -133,7 +133,7 @@ $fontfam-1: 'Poppins', sans-serif;
    border: none;
 }
 
-.btn-container-add-item{
+.btn-container-edit-leave{
     margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
