--- a/Project/frontend/src/pages/Staff/Staff/AddStaff.scss
+++ b/Project/frontend/src/pages/Staff/Staff/AddStaff.scss
@@ -9,21 +9,21 @@ $ash-color: #636e72;
 // fonts
 $fontfam-1: 'Poppins', sans-serif;
 
-.add-item-container-main{
+.add-staff-container-main{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 90vh; //change height accordingly
+    height: 95vh; //change height accordingly
     background: rgb(153, 128, 250);
     background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
 
 // form styles will go on here
-.add-payroll-form-container {
-    width: 450px;
-    height: 580px;
+.add-staff-form-container {
+    width: 950px;
+    height: 650px;
     background-color: white;
     border-radius: 25px;
     box-shadow: 5px 5px 8px rgba($color: #000000, $alpha: .4),
@@ -61,7 +61,7 @@ $fontfam-1: 'Poppins', sans-serif;
     visibility: visible;
 }
 
-.tagline-add-item{
+.tagline-add-staff{
     font-size: 20px;
     font-weight: 600;
     color: $secondary-color-purple1;
@@ -76,7 +76,7 @@ $fontfam-1: 'Poppins', sans-serif;
     height: 530px;
 }
 
-.add-item-column{
+.add-staff-column{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -133,8 +133,8 @@ $fontfam-1: 'Poppins', sans-serif;
    border: none;
 }
 
-.btn-container-add-item{
-    margin-top: 10px;
+.btn-container-add-staff{
+    margin-top: 90px;
     display: flex;
     justify-content: space-evenly;
     width: 400px;
