--- a/Project/frontend/src/pages/Staff/Staff/EditStaff.scss
+++ b/Project/frontend/src/pages/Staff/Staff/EditStaff.scss
@@ -9,21 +9,21 @@ $ash-color: #636e72;
 // fonts
 $fontfam-1: 'Poppins', sans-serif;
 
-.add-item-container-main{
+.edit-staff-container-main{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 90vh; //change height accordingly
+    height: 95vh; //change height accordingly
     background: rgb(153, 128, 250);
     background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
 
 // form styles will go on here
-.add-leave-form-container {
-    width: 450px;
-    height: 600px;
+.edit-staff-form-container {
+    width: 950px;
+    height: 650px;
     background-color: white;
     border-radius: 25px;
     box-shadow: 5px 5px 8px rgba($color: #000000, $alpha: .4),
@@ -61,7 +61,7 @@ $fontfam-1: 'Poppins', sans-serif;
     visibility: visible;
 }
 
-.tagline-add-item{
+.tagline-edit-staff{
     font-size: 20px;
     font-weight: 600;
     color: $secondary-color-purple1;
@@ -76,7 +76,7 @@ $fontfam-1: 'Poppins', sans-serif;
     height: 530px;
 }
 
-.add-item-column{
+.edit-staff-column{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -114,7 +114,7 @@ $fontfam-1: 'Poppins', sans-serif;
 
 .input-textarea{
     width: 400px;
-    font-size: 20px;
+    font-size: 16px;
     padding: 10px 20px;
     outline: none;
     margin: 10px 0 15px 0;
@@ -133,7 +133,7 @@ $fontfam-1: 'Poppins', sans-serif;
    border: none;
 }
 
-.btn-container-add-item{
+.btn-container-edit-staff{
     margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
@@ -173,5 +173,3 @@ $fontfam-1: 'Poppins', sans-serif;
     cursor: pointer;
     box-shadow: 4px 4px 8px rgba($color: #000000, $alpha: .6);
 }
-
-
