--- a/Project/frontend/src/pages/Pet/AddPet.scss
+++ b/Project/frontend/src/pages/Pet/AddPet.scss
@@ -1,3 +1,4 @@
+// colors
 $primary-color-navyBlue : #2C2C54;
 $secondary-color-purple1: #7D5FFF;
 $secondary-color-purple2: #5F27CD;
@@ -13,16 +14,16 @@ $fontfam-1: 'Poppins', sans-serif;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 90vh; //change height accordingly
+    height: 95vh; //change height accordingly
     background: rgb(153, 128, 250);
     background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
-
 // form styles will go on here
-.add-item-form-container {
+.add-pet-form-container {
     width: 950px;
-    height: 620px;
+    height: 650px;
+    background-color: white;
     border-radius: 25px;
     box-shadow: 5px 5px 8px rgba($color: #000000, $alpha: .4),
     -5px -5px 8px rgba($color: #000000, $alpha: .4);
@@ -59,13 +60,13 @@ $fontfam-1: 'Poppins', sans-serif;
     visibility: visible;
 }
 
-.tagline-add-item{
+.tagline-add-pet{
     font-size: 20px;
     font-weight: 600;
     color: $secondary-color-purple1;
 }
-// column container stylings
 
+// column container stylings
 .column-container {
     display: flex;
     justify-content: space-between;
@@ -74,7 +75,7 @@ $fontfam-1: 'Poppins', sans-serif;
     height: 530px;
 }
 
-.add-item-column{
+.add-pet-column{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -112,7 +113,7 @@ $fontfam-1: 'Poppins', sans-serif;
 
 .input-textarea{
     width: 400px;
-    font-size: 20px;
+    font-size: 16px;
     padding: 10px 20px;
     outline: none;
     margin: 10px 0 15px 0;
@@ -131,7 +132,7 @@ $fontfam-1: 'Poppins', sans-serif;
    border: none;
 }
 
-.btn-container-add-item{
+.btn-container-add-pet{
     margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
