--- a/Project/frontend/src/pages/Pet/ViewTreatment.scss
+++ b/Project/frontend/src/pages/Pet/ViewTreatment.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
-    height: 625px;
+    height: 90vh;
   }
   
   
