--- a/Project/frontend/src/pages/Services/ManageService.scss
+++ b/Project/frontend/src/pages/Services/ManageService.scss
@@ -11,10 +11,10 @@
     align-items: center;
 }
   
-.listItemImg {
+.listItemServiceImg {
     width: 32px;
     height: 32px;
-    border-radius: 50%;
+    border-radius: 6px;
     object-fit: cover;
     margin-right: 10px;
 }
