--- a/Project/frontend/src/pages/Vet/Vet/Addvet.scss
+++ b/Project/frontend/src/pages/Vet/Vet/Addvet.scss
@@ -9,21 +9,21 @@ $ash-color: #636e72;
 // fonts
 $fontfam-1: 'Poppins', sans-serif;
 
-.add-item-container-main{
+.add-vet-container-main{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 110vh; //change height accordingly
+    height: 90vh; //change height accordingly
     background: rgb(153, 128, 250);
     background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
 
 // form styles will go on here
-.add-item-form-container {
-    width: 600px;
-    height: 680px;
+.add-vet-form-container {
+    width: 950px;
+    height: 580px;
     background-color: white;
     border-radius: 25px;
     box-shadow: 5px 5px 8px rgba($color: #000000, $alpha: .4),
@@ -61,22 +61,22 @@ $fontfam-1: 'Poppins', sans-serif;
     visibility: visible;
 }
 
-.tagline-add-item{
+.tagline-add-vet{
     font-size: 20px;
     font-weight: 600;
     color: $secondary-color-purple1;
 }
-// column container stylings
 
+// column container stylings
 .column-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    //width: 100%;
+    width: 100%;
     height: 530px;
 }
 
-.add-item-column{
+.add-vet-column{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -133,7 +133,7 @@ $fontfam-1: 'Poppins', sans-serif;
    border: none;
 }
 
-.btn-container-add-item{
+.btn-container-add-vet{
     margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
