--- a/Project/frontend/src/pages/Vet/Vet/EditVet.scss
+++ b/Project/frontend/src/pages/Vet/Vet/EditVet.scss
@@ -9,11 +9,11 @@ $ash-color: #636e72;
 // fonts
 $fontfam-1: 'Poppins', sans-serif;
 
-.add-item-container-main{
+.edit-vet-container-main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 100%;
     height: 90vh; //change height accordingly
     background: rgb(153, 128, 250);
     background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
@@ -21,8 +21,8 @@ $fontfam-1: 'Poppins', sans-serif;
 
 
 // form styles will go on here
-.add-vet-form-container {
-    width: 900px;
+.edit-vet-form-container {
+    width: 950px;
     height: 580px;
     background-color: white;
     border-radius: 25px;
@@ -61,13 +61,13 @@ $fontfam-1: 'Poppins', sans-serif;
     visibility: visible;
 }
 
-.tagline-add-item{
+.tagline-edit-vet{
     font-size: 20px;
     font-weight: 600;
     color: $secondary-color-purple1;
 }
-// column container stylings
 
+// column container stylings
 .column-container {
     display: flex;
     justify-content: space-between;
@@ -76,7 +76,7 @@ $fontfam-1: 'Poppins', sans-serif;
     height: 530px;
 }
 
-.add-item-column{
+.edit-vet-column{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -133,7 +133,7 @@ $fontfam-1: 'Poppins', sans-serif;
    border: none;
 }
 
-.btn-container-add-item{
+.btn-container-edit-vet{
     margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
