--- a/Project/frontend/src/components/productCharts/productLineChart.css
+++ b/Project/frontend/src/components/productCharts/productLineChart.css
@@ -1,12 +1,12 @@
-.productBarChart {
-    margin: 20px;
-    padding: 20px;
+.productLineChart {
+    padding: 20px 10px;
+    margin-top: 30px;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
   
 .productChartTitle {
-    margin-bottom: 20px;
-    text-align: center;
-    color:  #9980FA;
+  margin-bottom: 20px;
+  text-align: center;
+  color:  #9980FA;
 }
