--- a/Project/frontend/src/pages/Product/viewOrder.scss
+++ b/Project/frontend/src/pages/Product/viewOrder.scss
@@ -29,7 +29,7 @@
 }
 
 .orderRow:hover .orderDetail {
-    border-left: 5px solid #7D5FFF;
+    border-left: 5px solid #7D5FFF !important;
 }
 
 .orderDetail, .orderData {
