--- a/Project/frontend/src/pages/Product/viewProduct.scss
+++ b/Project/frontend/src/pages/Product/viewProduct.scss
@@ -56,7 +56,7 @@
 }
 
 .productRow:hover .productDetail {
-    border-left: 5px solid #7D5FFF;
+    border-left: 5px solid #7D5FFF !important;
 }
 
 .productDetail, .productData {
