--- a/Project/frontend/src/pages/Pet/ViewPet.scss
+++ b/Project/frontend/src/pages/Pet/ViewPet.scss
@@ -1,99 +1,55 @@
-.service {
+.pet {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
-  height: 90vh;
+  // background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
+  height: auto;
+  min-height: 90vh;
+  padding: 40px;
 }
 
-.imageContainer {
-  text-align: center;
-  vertical-align: middle;
-}
-
-table {
-  margin: 5px;
-  border: 2px solid gray;
-}
-
-table tr td {
-  align-items: center;
-  border: 1px solid lightgray;
-  padding: 5px 10px;
-}
-
-.service-record-container{
-  width: 1000px;
-  height: 550px;
-  background-color: white;
-  border-radius: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-
-.service-pic-container{
-  width: 350px;
-  height: 90%;
+.pet-record-container{
   display: flex;
   justify-content: center;
   align-items: center;
-  flex:1;
+  padding: 30px 80px 30px 50px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
 
-.service-details-container{
-  padding-top: 50px;
+.pet-pic-container{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  width: 625px;
-  height: 90%;
-  flex:1;
+  padding: 30px;
 }
 
-.service-img{
+.pet-img{
   height: 200px;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
-.service-prompts{
-  font-size: 1.2em;
+.pet-details-container{
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
   flex-direction: column;
-  width: 49%;
-
 }
 
-.service-values{
-  font-size: 1.2em;
+.pet-line {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-  width: 55%;
-
+  margin: 10px 0 10px 30px;
 }
 
-.service-line-info{
+.pet-line-info{
+  flex: 1;
   padding: 5px 10px;
-  margin-top: 10px;
-  font-weight: 700;
+  font-weight: 600;
+  min-width: 200px; //change accordingly
+  white-space: pre-wrap;
 }
 
-.service-line-info-values{
-  width: 90%;
+.pet-line-info-values{
+  flex: 2;
   padding: 5px 10px;
-  margin-top: 10px;
   border-radius: 5px;
-}
-
-.service-line-info-values:nth-child(4){
-  padding: 5px 10px;
-  margin-top: 20px;
-  border-radius: 5px;
-  text-align: justify;
-  text-justify: inter-word;
+  white-space: pre-wrap;
 }
