--- a/Project/frontend/src/pages/Pet/ViewTreatment.scss
+++ b/Project/frontend/src/pages/Pet/ViewTreatment.scss
@@ -1,82 +1,43 @@
-.service {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
-    height: 90vh;
-  }
-  
-  
-  table {
-    margin: 5px;
-    border: 2px solid gray;
-  }
-  
-  table tr td {
-    align-items: center;
-    border: 1px solid lightgray;
-    padding: 5px 10px;
-  }
-  
-  .service-record-container{
-    width: 700px;
-    height: 580px;
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-  }
- 
-  
-  .service-details-container{
-    padding-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 650px;
-    height: 90%;
-    flex:1;
-  }
-  
-  
-  
-  .service-prompts{
-    font-size: 1.2em;
-    display: flex;
-    flex-direction: column;
-    width: 54%;
-   
-  
-  }
-  
-  .service-values{
-    font-size: 1.2em;
-    display: flex;
- 
-    flex-direction: column;
-    width: 54%;
-  
-  }
-  
-  .service-line-info{
-    padding: 5px 10px;
-    margin-top: 10px;
-    font-weight: 700;
-  }
-  
-  .service-line-info-values{
-    width: 110%;
-    padding: 5px 10px;
-    margin-top: 10px;
-    border-radius: 5px;
-  }
-  
-  .service-line-info-values:nth-child(4){
-    padding: 5px 10px;
-    margin-top: 20px;
-    border-radius: 5px;
-    text-align: justify;
-    text-justify: inter-word;
-  }
+.treatment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
+  height: auto;
+  min-height: 90vh;
+  padding: 40px;
+}
+
+.treatment-record-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 50px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+.treatment-details-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.treatment-line {
+  display: flex;
+  margin: 10px 0;
+}
+
+.treatment-line-info{
+  flex: 1;
+  padding: 5px 10px;
+  font-weight: 600;
+  min-width: 180px; //change accordingly
+  white-space: pre-wrap;
+}
+
+.treatment-line-info-values{
+  flex: 2;
+  padding: 5px 10px;
+  border-radius: 5px;
+  white-space: pre-wrap;
+}
