--- a/Project/frontend/src/pages/Staff/Payroll/ViewPayroll.scss
+++ b/Project/frontend/src/pages/Staff/Payroll/ViewPayroll.scss
@@ -2,98 +2,42 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
+    // background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
     height: auto;
     min-height: 90vh;
-}
-
-.imageContainer {
-    text-align: center;
-    vertical-align: middle;
-}
-
-table {
-    margin: 5px;
-    border: 2px solid gray;
-}
-
-table tr td {
-    align-items: center;
-    border: 1px solid lightgray;
-    padding: 5px 10px;
+    padding: 40px;
 }
 
 .payroll-record-container{
-    width: 500px;
-    height: 350px;
-    background-color: white;
-    border-radius: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 30px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
-
-// .payroll-pic-container{
-//     width: 350px;
-//     height: 90%;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-// }
 
 .payroll-details-container{
-    padding-top: 20px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 625px;
-    height: 90%;
+    flex-direction: column;
 }
 
-// .payroll-img{
-//     height: 400px;
-//     border-radius: 20px;
-// }
-
-.payroll-prompts{
-    font-size: 1.2em;
+.payroll-line {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 49%;
-    height: 100%;
-}
-
-.payroll-values{
-    font-size: 1.2em;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 55%;
-    height: 100%;
+    margin: 10px 0;
 }
 
 .payroll-line-info{
+    flex: 1;
     padding: 5px 10px;
-    margin-top: 10px;
-    font-weight: 700;
+    font-weight: 600;
+    min-width: 180px; //change accordingly
+    white-space: pre-wrap;
 }
 
 .payroll-line-info-values{
-    width: 90%;
+    flex: 2;
     padding: 5px 10px;
-    margin-top: 10px;
     border-radius: 5px;
+    white-space: pre-wrap;
 }
-
-// .payroll-line-info-values{
-//     padding: 5px 10px;
-//     margin-top: 20px;
-//     height: 130px;
-//     border-radius: 5px;
-//     text-align: justify;
-//     text-justify: inter-word;
-// }
