--- a/Project/frontend/src/pages/Vet/Prescription/ViewPrescription.scss
+++ b/Project/frontend/src/pages/Vet/Prescription/ViewPrescription.scss
@@ -2,85 +2,44 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
+    // background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
     height: auto;
     min-height: 90vh;
-}
-
-.imageContainer {
-    text-align: center;
-    vertical-align: middle;
-}
-
-table {
-    margin: 5px;
-    border: 2px solid gray;
-}
-
-table tr td {
-    align-items: center;
-    border: 1px solid lightgray;
-    padding: 5px 10px;
+    padding: 40px;
 }
 
 .prescription-record-container{
-    width: 1000px;
-    height: 500px;
-    background-color: white;
-    border-radius: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 30px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
-
 
 .prescription-details-container{
-    padding-top: 50px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 625px;
-    height: 90%;
-    margin-left: 200px;
-}
-
-.prescription-img{
-    height: 400px;
-    border-radius: 20px;
-}
-
-.prescription-prompts{
-    font-size: 1.2em;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
     flex-direction: column;
-    width: 49%;
-    height: 100%;
 }
 
-.prescription-values{
-    font-size: 1.2em;
+.prescription-line {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 55%;
-    height: 100%;
+    margin: 10px 0;
 }
 
 .prescription-line-info{
+    flex: 1;
     padding: 5px 10px;
-    margin-top: 10px;
-    font-weight: 700;
+    font-weight: 600;
+    min-width: 150px; //change accordingly
+    white-space: pre-wrap;
 }
 
 .prescription-line-info-values{
-    width: 90%;
+    flex: 2;
     padding: 5px 10px;
-    margin-top: 10px;
     border-radius: 5px;
+    white-space: pre-wrap;
 }
 
 // .vet-line-info-values{
