reorder point (rop) calculator

--- a/Project/frontend/src/pages/Inventory/overview-page/overview.scss
+++ b/Project/frontend/src/pages/Inventory/overview-page/overview.scss
@@ -147,3 +147,12 @@ $secondary-color-purple4: #e9e3ff;
 	background-color: #e74c3c;
 	color: white;
 }
+
+.genereate-rep-btn-invnentory{
+	width: 150px;
+	padding: 5px;
+	background-color: $secondary-color-purple1;
+	color: white;
+	border-radius: 5px;
+	font-size: 1.1em;
+}
